tests/models/struct/unnamed/u32/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    u32
);
fn main() {}
